--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <i id="message"></i>
 </body>
 <style>
+    * {
+      text-align: center;
+    }
     i {
         font-size: xx-large;
     }
@@ -38,6 +41,10 @@
         padding: 5px 5px;
         width: 10px;
         border: 1px solid black;
+    }
+    #setup {
+      width: 300px;
+      margin: 0 auto;
     }
     canvas {
         background-color: royalblue;
