--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>HANGMAN</h1>
     <div id="setup">
         <p>Select the world to be guessed:</p>
-        <input type="password" maxlength="50" id="mainInput" value="">
+        <label for="mainInput"></label><input type="password" maxlength="50" id="mainInput" value="">
         <button id="submit">submit</button>
     </div>
     <div id="main">
